still fixing alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -66,8 +66,7 @@ blockquote {
     padding-bottom: 5px;
     padding-left: 10px;
     margin-right: 20px;
-    // display: inline-block;
-    float:left;
+    float:left !important;
     border-color: #30C2D7;
     border-width: 2px;
     border-style: solid;
